working test for java9 module against java8-compiled binary